data/derived/comb/progs/unify/prog1769.ml.out
Characters 78-110:
  | 1 -> buildSine(build (rand, depth-(depth -1)))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
